--- a/R_C14_rates calculation/2_Chl a and NPP/Chla_npp_3.0.Rmd
+++ b/R_C14_rates calculation/2_Chl a and NPP/Chla_npp_3.0.Rmd
@@ -4,27 +4,33 @@ author: "Denise Ong"
 date: "11/28/2022"
 output: html_document
 ---
+
 For manuscript figures and data.
 remove stations that correspond to cycles SA1-B
 
 # initialise
+
 ```{r, echo=TRUE, message=FALSE, warning=FALSE}
 library(here)
-source(here("init_files", "init.R")) #for libraries
-source(here("init_files", "init_markdown.R")) #for markdown libraries
+source(here("0_init_files", "init.R")) #for libraries
+source(here("0_init_files", "init_markdown.R")) #for markdown libraries
+#Colours
+colours_cycle <- readxl::read_excel(here("0_init_files", "colours_cycle.xlsx"), sheet = "cycle")
+colours_cycle <- structure(colours_cycle$colour,.Names=colours_cycle$cycle)
 
 ```
 
 # NPP data
+
 ```{r}
-npp_raw <- readxl::read_excel("data_used/TAN1810_NPP_areal_2.0.xlsx")  %>%
+npp_raw <- readxl::read_excel(here("0_data_used", "TAN1810_NPP_areal_2.0.xlsx"))%>%
   select(Cycle, Station, Depth, U_Cast, mean_NPP, sd_NPP, areal_PP) %>%
   distinct() %>%
-  mutate(cycle_name = recode(Cycle, "1" = "SA1",
-                                    "2" = "SA2",
+  mutate(cycle_name = dplyr::recode(Cycle, "1" = "SA-Sc",
+                                    "2" = "SA1",
                                     "3" = "ST1",
                                     "4" = "ST2",
-                                    "5" = "SA3")) %>%
+                                    "5" = "SA2")) %>%
   rename(cycle = `Cycle`,
          station = `Station`,
          depth = `Depth`,
@@ -32,7 +38,7 @@ npp_raw <- readxl::read_excel("data_used/TAN1810_NPP_areal_2.0.xlsx")  %>%
 npp_raw$CTD <- sub("^", "U", npp_raw$CTD)
 
 #use the "complete data TAN1810" sheet for the experiment details.
-C14_hot <- readxl::read_excel("data_used/TAN1810_14C-Pico_25052020_QA_1.2.xlsx", sheet = "Complete data TAN1810", skip = 11) %>%
+C14_hot <- readxl::read_excel(here("0_data_used", "TAN1810_14C-Pico_25052020_QA_1.2.xlsx"), sheet = "Complete data TAN1810", skip = 11) %>%
   dplyr::select (`Cycle#`, `EXP#`, `CTD#`,`STN`) %>%   
      dplyr::rename(cycle = `Cycle#`,
             exp = `EXP#`,
@@ -45,7 +51,7 @@ C14_hot$exp <- as.character(C14_hot$exp)
 
 npp <- full_join(npp_raw, C14_hot) %>%
   unite(station_exp, c(station, exp), sep = "_", remove = FALSE) %>%
-  mutate(cycle_name = fct_relevel(cycle_name, "ST1", "ST2", "SA1", "SA2", "SA3")) %>%
+  mutate(cycle_name = fct_relevel(cycle_name, "ST1", "ST2", "SA-Sc", "SA1", "SA2")) %>%
   filter(!(station %in% c("51", "69","90" ))) # remove stations that correspond to cycle SA1-B
 
 depth_check <- npp %>%
@@ -57,11 +63,29 @@ depth_check <- npp %>%
 depth_check
 ```
 
+for depth group incubations.
+
+```{r}
+C14_hot_depth <- readxl::read_excel(here("0_data_used", "TAN1810_14C-Pico_25052020_QA_1.2.xlsx"), sheet = "Complete data TAN1810", skip = 11) %>%
+  dplyr::select (`Cycle#`, `EXP#`, `CTD#`, `SAMPLE`, `STN`, `DEPTH`) %>%   
+     dplyr::rename(cycle = `Cycle#`,
+            exp = `EXP#`,
+            CTD = `CTD#`,
+            sample = `SAMPLE`, 
+            station = `STN`,
+            depth = `DEPTH`)%>%
+    distinct() %>%
+  filter(!is.na(cycle))
+C14_hot_depth$cycle <- as.character(C14_hot_depth$cycle)
+C14_hot_depth$exp <- as.character(C14_hot_depth$exp)
+```
+
 ## summary surface and DCM
+
 ```{r}
 npp_sum <- full_join(npp, C14_hot_depth) %>%
   filter(!(is.na(sample))) %>%
-  mutate(mean_NPP = case_when (is.na(mean_NPP) ~ 0.14045846, # value from depth at 30 m instead of 40 m
+  mutate(mean_NPP = case_when (is.na(mean_NPP) ~ 0.14045846, # Missing one value from station 223, using mean NPP from depth at 30 m instead of 40 m
                                TRUE ~ mean_NPP)) 
 summary <- npp_sum %>%
   group_by(cycle_name) %>%
@@ -74,37 +98,39 @@ summary
 ```
 
 # Chlorophyll data
-Only using PM chla as an indicator for phytoplankton biomass. 
 
-the depth for U9104, exp 1 does not correspond to the depth usually collected. I have changed to what I think is the right depth. values are similar to the other ctds for the same cyle. - using depth_corrected
-AD145 - 2 depths measured at 30 m. one should be 20 and one should be 30m. using depth_corrected values
+Notes:
 
-Based on fluoresence, separate SA1-A and SA1-B. SA1-B has lower flourescence. As the exps for C14 only come from SA1-A, use SA1-A only for SA1. 
+-   Only using PM chla as an indicator for phytoplankton biomass.
+-   the depth for U9104, exp 1 does not correspond to the depth usually collected. I have changed to what I think is the right depth. values are similar to the other ctds for the same cycle, using depth_corrected column for depths instead.
+-   AD145 - 2 depths measured at 30 m. one should be 20 and one should be 30m. using depth_corrected values
+-   Based on fluoresence, separate SA-Sc-A and SA-Sc-B. SA-Sc-B has lower fluorescence. As the exps for C14 only come from SA-Sc-A, use SA-Sc-A only for SA-Sc.
+-   no corresponding chla values for the same CTD for experiment 1,2,3.
 
-no corresponding chla values for the same CTD for experiment 1,2,3.
 ## Read data
+
 ```{r}
-chl <- readxl::read_excel("data_used/TAN1810_SFChla_2.0.xls", sheet = "chla_int") %>%
+chl <- readxl::read_excel(here("0_data_used", "TAN1810_SFChla_2.0.xls"), sheet = "chla_int") %>%
   dplyr::select(NIWA_ID, U_Cast, cycle, cycle_2, time, exp, depth_corrected, Chla_0.2:Chla_20_pct)%>%
   filter(!is.na(cycle)) %>%
   rename(depth = `depth_corrected`,
          CTD = `U_Cast`) %>%
-  mutate(cycle_name = recode(cycle, "1" = "SA1",
-                                    "2" = "SA2",
+  mutate(cycle_name = dplyr::recode(cycle, "1" = "SA-Sc",
+                                    "2" = "SA1",
                                     "3" = "ST1",
                                     "4" = "ST2",
-                                    "5" = "SA3")) %>%
-  mutate(cycle_name_2 = recode(cycle_2, "1a" = "SA1-a",
-                                    "1b" = "SA1-b",
-                                    "2" = "SA2",
+                                    "5" = "SA2")) %>%
+  mutate(cycle_name_2 = dplyr::recode(cycle_2, "1a" = "SA-Sc-a",
+                                    "1b" = "SA-Sc-b",
+                                    "2" = "SA1",
                                     "3" = "ST1",
                                     "4" = "ST2",
-                                    "5" = "SA3")) %>%
-  mutate(cycle_name = fct_relevel(cycle_name, "ST1", "ST2", "SA1", "SA2", "SA3")) %>%
-  mutate(cycle_name_2 = fct_relevel(cycle_name_2, "ST1", "ST2", "SA1-a", "SA1-b", "SA2", "SA3")) %>%
-  na_if(0) %>% # replace 0% as NA as these values were not measured.
-  drop_na(Chla_0.2,Chla_2, Chla_20)  %>% #remove rows where there are some missing measurements for the SF? I think this is better so that the values are more accurate. change the way int chla is calculated? decide later.
-  filter(cycle_name_2 != "SA1-b") %>%
+                                    "5" = "SA2")) %>%
+  mutate(cycle_name = fct_relevel(cycle_name, "ST1", "ST2", "SA-Sc", "SA1", "SA2")) %>%
+  mutate(cycle_name_2 = fct_relevel(cycle_name_2, "ST1", "ST2", "SA-Sc-a", "SA-Sc-b", "SA1", "SA2")) %>%
+  mutate(across(where(is.numeric), ~na_if(., 0))) %>% # replace 0 as NA as these values were not measured.
+  drop_na(Chla_0.2,Chla_2, Chla_20)  %>% #remove rows where there are some missing measurements for the SF. I think this is better so that the values are more accurate. 
+  filter(cycle_name_2 != "SA-Sc-b") %>%
   filter(time == "noon")
 
 chl$cycle <- as.character(chl$cycle)
@@ -119,16 +145,18 @@ depth_check <- chl %>%
 
 depth_check
 ```
+
 #summary table
+
 ```{r}
 #by water mass
 chl_summary <- chl %>%
   select(cycle_name, areal_chl) %>%
   distinct() %>%
-  mutate(water_mass = recode(cycle_name, 
+  mutate(water_mass = dplyr::recode(cycle_name, 
+                             "SA-Sc" = "SA",
                              "SA1" = "SA",
                              "SA2" = "SA",
-                             "SA3" = "SA",
                              "ST1" = "ST",
                              "ST2" = "ST"
                              )) %>%
@@ -143,10 +171,10 @@ chl_summary
 npp_summary <- npp %>%
   select(cycle_name, areal_PP) %>%
   distinct() %>%
-  mutate(water_mass = recode(cycle_name, 
+  mutate(water_mass = dplyr::recode(cycle_name, 
+                             "SA-Sc" = "SA",
                              "SA1" = "SA",
                              "SA2" = "SA",
-                             "SA3" = "SA",
                              "ST1" = "ST",
                              "ST2" = "ST"
                              )) %>%
@@ -163,10 +191,10 @@ chl_summary <- chl %>%
   filter(depth %in% c("10", "12")) %>%
   select(cycle_name, SumSFChla) %>%
   distinct() %>%
-  mutate(water_mass = recode(cycle_name, 
+  mutate(water_mass = dplyr::recode(cycle_name, 
+                             "SA-Sc" = "SA",
                              "SA1" = "SA",
                              "SA2" = "SA",
-                             "SA3" = "SA",
                              "ST1" = "ST",
                              "ST2" = "ST"
                              )) %>%
@@ -177,25 +205,23 @@ chl_summary <- chl %>%
 chl_summary
 
 npp_summary <- npp %>%
-  select(cycle_name, mean_NPP) %>%
-  distinct() %>%
-  mutate(water_mass = recode(cycle_name, 
+  mutate(water_mass = dplyr::recode(cycle_name, 
+                             "SA-Sc" = "SA",
                              "SA1" = "SA",
                              "SA2" = "SA",
-                             "SA3" = "SA",
                              "ST1" = "ST",
                              "ST2" = "ST"
                              )) %>%
   mutate(depth_cat = case_when(depth == "12" ~ "SUR",
                               (depth == "40" & cycle_name == "ST1") ~ "DCM",
-                               # (depth == "25" & cycle_name == "ST1") ~ "DCM",
-                               # (depth == "30" & cycle_name == "ST2") ~ "DCM",
                                (depth == "40" & cycle_name == "ST2") ~ "DCM",
+                               (depth == "40" & cycle_name == "SA-Sc") ~ "DCM",
                                (depth == "40" & cycle_name == "SA1") ~ "DCM",
-                               (depth == "40" & cycle_name == "SA2") ~ "DCM",
-                               (depth == "70" & cycle_name == "SA3") ~ "DCM",
+                               (depth == "70" & cycle_name == "SA2") ~ "DCM",
                                   TRUE ~as.character(cycle_name))) %>%
   filter(depth_cat %in% c("SUR", "DCM")) %>%
+  select(cycle_name, mean_NPP) %>%
+  distinct() %>%
   group_by(cycle_name) %>%
   summarise(mean = mean(mean_NPP,  na.rm=TRUE),
             sd = sd(mean_NPP,  na.rm=TRUE),
@@ -206,10 +232,10 @@ npp_summary
 
 ```
 
-
 #integrated chla and integrated npp plot
 
 ## prepare dataframe
+
 ```{r}
 #list of integrated chla and max depth sampled. 
 depth <- chl %>%
@@ -248,19 +274,21 @@ int_chl <- chl %>%
 sf_chl <- full_join(sf_pct, int_chl) %>%
   mutate(sf_int = mean_int*mean/100) %>%
   mutate(size = fct_relevel(size, "20", "2", "0.2")) 
+```
 
+```{r, eval=FALSE}
+#checks
 sf_summary <- sf_chl %>%
   filter(size == "20") %>%
   dplyr::select(sf_int, cycle_name, size) %>%
   distinct() %>%
-  filter(cycle_name == "SA1") %>%
+  filter(cycle_name == "SA-Sc") %>%
   summarise(sf_int = mean(sf_int))
 sf_summary
-  
 ```
 
-
 ## Figure 3 - depth integrated Chl a and NPP
+
 ```{r}
 theme_set(theme_classic())
 # two separate graphs for int chla and npp, combine tgt
@@ -273,7 +301,6 @@ p1 <- sf_chl %>%
   ylab("Integrated chla (mg/m2)") +
   theme(legend.position="top") 
 p1
-# pdf("figures/2_NPP chla/20221129_int chla.pdf", height=7, width=6) ; plot(p) ; dev.off()
 
 p2<- npp %>%
   select(cycle_name, areal_PP) %>%
@@ -291,6 +318,7 @@ plot
 ```
 
 ## Figure S4 - proportion of size fraction
+
 ```{r}
 #proportion of sf
 p <- sf_chl %>%
@@ -308,6 +336,7 @@ p
 # chla and npp by depth
 
 ## Figure S3 - chla stacked area chart - combine sf chla and chla by depth
+
 ```{r}
 library(viridis)
 p <- chl %>%
@@ -324,11 +353,6 @@ p <- chl %>%
   xlim(0,1.5) +
   ylab("Depth (m)") +
   xlab("Average chla (mg/m3)") +
-  # geom_hline(yintercept = 40,linetype=2) +
-  # geom_hline(yintercept = 12,linetype=2) +
-  # geom_hline(yintercept = 25,linetype=2) +
-  # geom_hline(yintercept = 30,linetype=2) +
-  # geom_hline(yintercept = 70,linetype=2) +
   theme(strip.text.y.right = element_text(angle = 0),
         legend.position="top",
         strip.background = element_blank()) +
@@ -340,6 +364,7 @@ p
 ```
 
 ## Figure S5 - NPP and Chl a by depth
+
 ```{r}
 
 # plot all cycles together
@@ -392,4 +417,3 @@ plot
 # pdf("figures/2_NPP chla/20221213_depth chla npp combine_v2.pdf", height=6, width=6) ; plot(plot) ; dev.off()
 
 ```
-
