--- a/R_C14_rates calculation/2_Chl a and NPP/NPP rates calculation 2.0.Rmd
+++ b/R_C14_rates calculation/2_Chl a and NPP/NPP rates calculation 2.0.Rmd
@@ -7,42 +7,19 @@ output: pdf_document
 
 Compare the readings from the cold incubation vs standard incubation. The units is (mgC/m3/day).
 Calculations for NPP_cold and NPP_standard have been done to this formula: Pvol = DIC x (DPMvol/(SA x V)) x 1.05 x 1000
-Cold incubation - small vol, high C14
-- 9 mL, 5 mCi/ml
-Standard incubation - large vol, low C14
-
-
-If standard is too high compared to cold, could be because it is on the high size fraction, increase variability.
-
-to check:
-- U9161: 70 m npp cold values are measured twice?
-
-24 Oct 2022 notes:
-- ST1, exp 7 (station 207). U9144 DCM. both cold and standard NPPs negligible primary production - however Chla concentrations at this depth close to 2 mgChla m-3 - very high ? Spike forgotten? Problem with 14C? Senescent phytoplankton ? I would probably leave this experiment out when it comes to estimate ‘average’ production or interpret more general trends. Explaining that given the relatively high chla and FCM cell counts it seems odd to have such low carbon uptake.
-- U9141: I swapped surface and DCM in the cold incubation - based on chla profiles, NPP standard profiles,…that have 2-fold higher chla concentration at surface compared to 25 m
-- U9164 and U9167 are in cycle 5 but have no group-specific rate measurements. 
-- Cycle 1 exp 1 has no corresponding rate for cold and standard NPP measurements.
-
-- U9161: 70 m npp cold values are measured twice?
-
-Denise edits:
-- U9141: remove 12 m DCM dark vial reading. very high compared to other dark vial readings. 
-- U9133: remove NPP_cold, replicate B. leak during processing
-- U9136: 40 m incubation remove NPP cold. very low readings, possibly not spiked.
-- U9167: 60 m vial B, remove NPP cold measurement. Lower than dark measurement. X in comments.\
-
-
+NPP_cold - small vol, high C14
+NPP_standard - large vol, low C14
 
 ```{r, echo=TRUE, message=FALSE, warning=FALSE}
 library(here)
-source(here("init_files", "init.R")) #for libraries
-source(here("init_files", "init_markdown.R")) #for markdown libraries
+source(here("0_init_files", "init.R")) #for libraries
+source(here("0_init_files", "init_markdown.R")) #for markdown libraries
 ```
 
 
 # Read table for C14 cold values, merge for cycle and experiment number. Add new column to indicate dark. Added missing cycle and experiment information based on voyage report.
 ```{r}
-C14_cold_raw <- readxl::read_excel("data_used/TAN1810_14C-Pico_25052020_QA_1.2.xlsx", sheet = "Cold 14C - Pico Results", skip = 5,  n_max = 93) %>%
+C14_cold_raw <- readxl::read_excel(here("0_data_used", "TAN1810_14C-Pico_25052020_QA_1.2.xlsx"), sheet = "Cold 14C - Pico Results", skip = 5,  n_max = 93) %>%
   select (`Unique code or sample identifier`,`Station`,`CTD`, `Depth m`, `Sample ID`, `DPM to full volume`, `SA_dpm_mL`, `DIC`, `Replicate`,`replicate_incubation`,  `NPP_cold`, `NPP_standard`)  %>%
   dplyr::rename(name = `Unique code or sample identifier`,
             station = `Station`,
@@ -56,7 +33,7 @@ C14_cold_raw <- readxl::read_excel("data_used/TAN1810_14C-Pico_25052020_QA_1.2.x
 
 
 #use the "complete data TAN1810" sheet for the experiment details.
-C14_hot <- readxl::read_excel("data_used/TAN1810_14C-Pico_25052020_QA_1.2.xlsx", sheet = "Complete data TAN1810", skip = 11) %>%
+C14_hot <- readxl::read_excel(here("0_data_used", "TAN1810_14C-Pico_25052020_QA_1.2.xlsx"), sheet = "Complete data TAN1810", skip = 11) %>%
   dplyr::select (`Cycle#`, `EXP#`, `CTD#`, `SAMPLE`, `STN`, `DEPTH`) %>%   
      dplyr::rename(cycle = `Cycle#`,
             exp = `EXP#`,
@@ -68,9 +45,9 @@ C14_hot <- readxl::read_excel("data_used/TAN1810_14C-Pico_25052020_QA_1.2.xlsx",
   filter(!is.na(cycle))
 
 C14_cold <- right_join(C14_hot, C14_cold_raw) %>%
-  na_if("missing") %>% # some labels for DCM are not correct
+  mutate(NPP_standard = na_if(NPP_standard, "missing")) %>% 
   mutate(sample = case_when(depth <= 12 ~ "SUR",
-                            depth >12 ~ "DCM"))
+                            depth >12 ~ "DCM")) # some labels for DCM are not correct
 
 C14_cold$cycle <- as.character(C14_cold$cycle) 
 C14_cold$exp <- as.character(C14_cold$exp)
@@ -143,19 +120,19 @@ cold_corrected <- full_join(C14_cold_edit,dark_NPP) %>%
   mutate(standard_corrected = NPP_standard - NPP_standard_dark) %>%
   select(cycle, exp, sample,  station, depth, name, replicate_incubation, replicate, cold_corrected, standard_corrected) %>%
   mutate(exp = case_when(is.na(exp) ~ station, TRUE ~ as.double(exp))) %>% # add station to exp in cycle 5 with no corresponding exp number
-  mutate(cycle_name = recode(cycle, "1" = "SA1",
-                                    "2" = "SA2",
+  mutate(cycle_name = dplyr::recode(cycle, "1" = "SA-Sc",
+                                    "2" = "SA1",
                                     "3" = "ST1",
                                     "4" = "ST2",
-                                    "5" = "SA3")) %>% 
+                                    "5" = "SA2")) %>% 
   unite(cycle_exp, c(cycle_name, exp), sep = "_", remove = FALSE) %>%
   arrange(exp) %>%
   mutate(sample = fct_relevel(sample, "SUR", "DCM")) %>%
-  mutate(cycle_name = fct_relevel(cycle_name, "ST1", "ST2", "SA1", "SA2", "SA3"))
+  mutate(cycle_name = fct_relevel(cycle_name, "ST1", "ST2", "SA-Sc", "SA1", "SA2"))
 cold_corrected$exp <- as.character(cold_corrected$exp)
 cold_corrected$exp <- as.double(cold_corrected$exp)
 cold_corrected
-writexl::write_xlsx(cold_corrected, "group_rates_output/NPP_cold_standard.xlsx")
+writexl::write_xlsx(cold_corrected, here("Output", "Raw data", "NPP_cold_standard.xlsx"))
 ```
 
 
@@ -172,7 +149,7 @@ summary<- cold_corrected %>%
   ungroup() %>%
   arrange(cycle_exp)
 summary
-writexl::write_xlsx(summary, "group_rates_output/NPP_cold_standard_summary.xlsx")
+writexl::write_xlsx(summary, here("Output", "Raw data", "NPP_cold_standard_summary.xlsx"))
 ```
 
 
