--- a/R_C14_rates calculation/3_Group rates/Group rates calculation_2.0.Rmd
+++ b/R_C14_rates calculation/3_Group rates/Group rates calculation_2.0.Rmd
@@ -7,8 +7,6 @@ output:
   html_document: default
 ---
 
-Only script for C14 paper.
-
 ```{r setup, include=FALSE}
   knitr::opts_chunk$set(message=FALSE,
                         warning=FALSE,
@@ -23,15 +21,6 @@ library(ggplot2)
 library(broom)
 ```
 
-# Denise: update on 20221019
-For exp 8: SUR: vial B: nano, I could calculate the pp value based on LM (1000, 2000 cells sorted) and only 1000 cells sorted. 
-Nano:8: sur: vial B: pp = 22.396 - from LM 
-Nano:8: sur: vial B: pp = 20.851 - from 1000 cells
- values are comparable. I will use only the 1000 cells value to keep consistent with the other nano values.
-
-# Denise: note on 12 Sept 2022
-While preparing for the GRC, I have decided to use method 2 from now and treat vials A,B,C as replicates instead of combining.
-
 # Denise edits
 
 The following edits made to pico and syn data:
@@ -39,10 +28,6 @@ The following edits made to pico and syn data:
 • Exp 2: DCM: pico vial A - only 1 value, cells sorted 1120. DPM is lower than the average dark vial. Remove
 •	Add Exp 8: SUR: nano – for vial B and D, there is cells sorted for both 1000 and 2000. Move to syn and pico calculations for lm value
 •	Exp 4: SUR: pico, syn – repeated vial B, take the average of the dpm value. For this experiment, vial D was lost. By mistake Domi started to sort again vial B so continued.
-
-
-Data points to check for Nano calculations:
-•	exp 5: SUR. Vial D is high. Also marked in the excel sheet. Removed, to be checked by Andres/Karl side.
 
 The following edits made to Nano data:
 •	Exp 6: SUR: nano – repeated vial A, remove lower value. 20221019- 1307 vs 384. 384 value is very low.
@@ -54,6 +39,7 @@ The following edits made to Nano data:
 • Added Exp 2: DCM: pico vial A- only 1 value, cells sorted 1120.
 •	Exp 8: SUR: nano – for vial B and D, there is cells sorted for both 1000 and 2000. Move to syn and pico calculations. for lm value. vial C also has cells sorted for both 1000 and 2000 cells, but 2000 cells dpm value is too low. calculate for vials A,B,C for 1000 cells also with the other nano.
 •	Exp 6: SUR: vial C, error in recording. Changed in excel sheet so excel sheet name used changed from "TAN1810_14C-Pico_25052020_QA.xlsx" to "TAN1810_14C-Pico_25052020_QA_1.0.xlsx"
+•	exp 5: SUR. Vial D is high. Also marked in the excel sheet. Removed.
 
 
 The calculations of primary production are based on single cell C14 uptake for cells sorted by flow cytometry. (https://vaulot.netlify.app/2018/05/20/compute-primary-production-based-on-single-cell-c14-uptake/)
@@ -70,7 +56,7 @@ The following edits made to pico and syn data:
 
 ## Read table for pico and syn. Data points to edit are made here. 
 ```{r}
-C14_DPM <- readxl::read_excel("data_used/TAN1810_14C-Pico_25052020_QA_1.2.xlsx", sheet = "Complete data TAN1810", skip = 11) %>%
+C14_DPM <- readxl::read_excel(here("0_data_used", "TAN1810_14C-Pico_25052020_QA_1.2.xlsx"), sheet = "Complete data TAN1810", skip = 11) %>%
   dplyr::select (`Cycle#`, `EXP#`, SAMPLE, `Vial code             (i - initials, A to C - light incubation, D - dark)`, `sorting population`, `Cells sorted`, DPM1, DIC, `SA_dpm_mL`) %>%   
      rename(cycle = `Cycle#`,
             exp = `EXP#`,
@@ -138,7 +124,7 @@ Do plots for each group. One regression line based on the EXP, Sample and Popula
   # DV - Set the y_scale to free so that graph is more easy to read
   facet_grid(rows=vars(exp), cols=vars(sample), scales = "free_y") +
   scale_color_viridis_d()
-pdf("figures/C14_regression_method 2.pdf", height=15, width=10) ; plot(reg_plot_2) ; dev.off()
+# pdf("figures/C14_regression_method 2.pdf", height=15, width=10) ; plot(reg_plot_2) ; dev.off()
 reg_plot_2
 ```
 
@@ -184,10 +170,6 @@ pp_cal_2
 
 
 # 2. Calculations for Nano (average)
-
-Data points to check for Nano calculations:
-•	exp 5: SUR. Vial D is high. Also marked in the excel sheet. Removed, to be checked by Andres/Karl side.
-
 The following edits made to Nano data:
 •	Exp 6: SUR: nano – repeated vial A, remove lower value. 20221019- 1307 vs 384. 384 value is very low.
 •	Exp 7: SUR: nano – remove Dark incubation is higher than B. The DPM of B is lower than average D values. Remove.
@@ -197,10 +179,12 @@ The following edits made to Nano data:
 •	Exp 4: SUR: nano – repeated vial B, take the average of the dpm value
 • Added Exp 2: DCM: pico vial A- only 1 value, cells sorted 1120.
 •	Exp 8: SUR: nano – for vial B and D, there is cells sorted for both 1000 and 2000. Move to syn and pico calculations. for lm value. vial C also has cells sorted for both 1000 and 2000 cells, but 2000 cells dpm value is too low. calculate for vials A,B,C for 1000 cells also with the other nano. 
+•	exp 5: SUR. Vial D is high. Also marked in the excel sheet. Removed.
+
 ## Read data
 ```{r}
 # Changed the excel sheet read, with final dpm and DIC values
-C14_DPM_nano <- readxl::read_excel("data_used/TAN1810_14C-Pico_25052020_QA_1.0.xlsx", sheet = "Complete data TAN1810", skip = 11)%>% 
+C14_DPM_nano <- readxl::read_excel(here("0_data_used", "TAN1810_14C-Pico_25052020_QA_1.2.xlsx"), sheet = "Complete data TAN1810", skip = 11)%>% 
   dplyr::select (`Cycle#`, `EXP#`, SAMPLE, `Vial code             (i - initials, A to C - light incubation, D - dark)`, `sorting population`, `Cells sorted`, DPM1, DIC, `SA_dpm_mL`) %>%   
      rename(cycle = `Cycle#`,
             exp = `EXP#`,
@@ -272,7 +256,7 @@ pp_cal_nano_2 <- mutate(C14_DPM_corrected_nano, pp = DIC*dpm_corrected*(1/(SA*24
   
 pp_cal_nano_2
 ```
-Nano:8: sur: vial B: pp = 20.851
+
 
 # 3. Join pico, syn and nano values together
 
@@ -285,7 +269,7 @@ pp_cal_2_join<-full_join(pp_cal_2,pp_cal_nano_2) %>%
 pp_cal_2_join
 #pp_cal_2_join$cycle <- as.character(pp_cal_2_join$cycle) 
 #pp_cal_2_join$exp <- as.character(pp_cal_2_join$exp)
-writexl::write_xlsx(pp_cal_2_join,"C14_rates per group_method2.xlsx")
+writexl::write_xlsx(pp_cal_2_join,here("Output", "Raw data", "C14_rates per group_method2.xlsx"))
 ```
 
 
@@ -307,6 +291,3 @@ pp_cal_2_join %>%
   geom_boxplot(aes(x= str_c(population,sample,  sep=" "), y = pp)) +
   xlab("Sample")
 ```
-
-The units for pp is fgC/h/cell.
-Rii (2016) finds 5–11 fmol C/cell/day for Syn which corresponds to 60-132 fg /day/cell ie 2.5 to 5.5 fg/h/cell.
