--- a/R_C14_rates calculation/3_Group rates/Group rates compile_2.0.Rmd
+++ b/R_C14_rates calculation/3_Group rates/Group rates compile_2.0.Rmd
@@ -12,21 +12,21 @@ npp units mgC/m3/day
 
 ```{r, echo=TRUE, message=FALSE, warning=FALSE}
 library(here)
-source(here("init_files", "init.R")) #for libraries
-source(here("init_files", "init_markdown.R")) #for markdown libraries
+source(here("0_init_files", "init.R")) #for libraries
+source(here("0_init_files", "init_markdown.R")) #for markdown libraries
 ```
 
 
 # Read data for group specific rates
 ```{r}
-pp_rates <- readxl::read_excel(here("group_rates_output", "C14_rates per group_method2.xlsx")) %>%
+pp_rates <- readxl::read_excel(here("Output", "Raw data", "C14_rates per group_method2.xlsx")) %>%
   rename(depth = `sample`) %>%
-  mutate(cycle_name = recode(cycle, "1" = "SA1",
-                                    "2" = "SA2",
+  mutate(cycle_name = dplyr::recode(cycle, "1" = "SA-Sc",
+                                    "2" = "SA1",
                                     "3" = "ST1",
                                     "4" = "ST2",
-                                    "5" = "SA3")) %>%
-  mutate(water_mass = recode(cycle, "1" = "SA",
+                                    "5" = "SA2")) %>%
+  mutate(water_mass = dplyr::recode(cycle, "1" = "SA",
                                     "2" = "SA",
                                     "3" = "ST",
                                     "4" = "ST",
@@ -36,7 +36,7 @@ pp_rates <- readxl::read_excel(here("group_rates_output", "C14_rates per group_m
 # Include experiment details - CTD number
 ```{r}
 #use the "complete data TAN1810" sheet for the experiment details.
-C14_hot <- readxl::read_excel(here("data_used", "TAN1810_14C-Pico_25052020_QA_1.2.xlsx"), sheet = "Complete data TAN1810", skip = 11) %>%
+C14_hot <- readxl::read_excel(here("0_data_used", "TAN1810_14C-Pico_25052020_QA_1.2.xlsx"), sheet = "Complete data TAN1810", skip = 11) %>%
   dplyr::select (`Cycle#`, `EXP#`, `SAMPLE`, `STN`, `DEPTH`, `CTD#`) %>%   
      dplyr::rename(cycle = `Cycle#`,
             exp = `EXP#`,
@@ -72,7 +72,7 @@ depth_check
 - Missing U9133 - cycle 2, experiment 5. julian day 309, 5 nov 2018, station 176. Checked the FCM CTD cast number against Moira "ALL_CTDS_BottleData", missing FCM counts for this day. I have decided to take the average counts of Nov 4 and Nov 6. 
 
 ```{r}
-fcm_raw <- readxl::read_xlsx(here("data_used", "MD FCM DATA.xlsx"), sheet= "INITS PROFILES_CYCLE", skip = 2) %>%
+fcm_raw <- readxl::read_xlsx(here("0_data_used", "MD FCM DATA.xlsx"), sheet= "INITS PROFILES_CYCLE", skip = 2) %>%
   select(MD, CTD, CYCLE, DEPTH_C14, `SYN/ML`, `PICO/mL`, `NANO/mL`) %>%
   dplyr::rename(cycle =`CYCLE`,
                 ctd = `CTD`,
@@ -100,13 +100,13 @@ fcm <- fcm %>%
   mutate(conc_m3 = conc_ml*10^6)%>% # change units from ml to m3
   mutate(npp = (pp*conc_m3*24*10^(-12))) # multiply by 24 to change from per hour to day, multiply by 10^-12 to convert from fg to mg
 
-writexl::write_xlsx(fcm, "group_rates_output/Rates_cell_npp_method2.xlsx")
+writexl::write_xlsx(fcm, here("Output", "Raw data", "Rates_cell_npp_method2.xlsx"))
 
 ```
 
-## export table for stats
+## summary table
 ```{r}
-pp_stats <- fcm %>%
+summary <- fcm %>%
   group_by(population,cycle_name,depth) %>%
   summarise(mean_pp = mean(pp),
             SD_pp = sd(pp),
@@ -114,11 +114,8 @@ pp_stats <- fcm %>%
             SD_npp = sd(npp),
             mean_conc_ml = mean(conc_ml),
             SD_conc_ml = sd(conc_ml)) 
-  #mutate(mean_sd = str_c(mean, SD, sep = "_")) %>%
-  
 
-pp_stats
-writexl::write_xlsx(pp_stats, "group_rates_output/RateM2_summary.xlsx")
+summary
 
 ```
 
