--- a/R_C14_rates calculation/private/Group rates figures_3.0.Rmd
+++ b/R_C14_rates calculation/private/Group rates figures_3.0.Rmd
@@ -4,7 +4,7 @@ author: "Denise Ong"
 date: "3/11/2021"
 output: html_document
 ---
-
+too many statistical tests, refer to 4.0
 
 ```{r, echo=TRUE, message=FALSE, warning=FALSE}
 library(here)
@@ -31,18 +31,21 @@ cold_standard <- readxl::read_excel("Output/Raw data/NPP_cold_standard.xlsx") %>
          depth = `sample`)
 cold_standard$exp <- as.character(cold_standard$exp)
 
-pp_rates <- readxl::read_excel("Output/Raw data/Rates_cell_npp_method2.xlsx")
+pp_rates <- readxl::read_excel("Output/Raw data/Rates_cell_npp_method2.xlsx") %>%
+  mutate(cycle_name = dplyr::recode(cycle_name, "SA1" = "SA-Sc")) %>%
+  mutate(cycle_name = dplyr::recode(cycle_name, "SA2" = "SA1")) %>%
+  mutate(cycle_name = dplyr::recode(cycle_name, "SA3" = "SA2"))
 
 #set factor levels
 pp_rates$water_mass <- factor(pp_rates$water_mass, levels = c("ST", "SA"))
-pp_rates$cycle_name <- factor(pp_rates$cycle_name, levels = c("ST1", "ST2", "SA1", "SA2", "SA3"))
+pp_rates$cycle_name <- factor(pp_rates$cycle_name, levels = c("ST1", "ST2", "SA-Sc", "SA1", "SA2"))
 pp_rates$population <- factor(pp_rates$population, levels = c("Syn", "Pico", "Nano"))
 pp_rates$depth <- factor(pp_rates$depth, levels = c("SUR", "DCM"))
 ```
 
 
 # Plots for paper
-## Figure 4 
+## Figure 4 - Boxplot raw data. Apparently not very good.
 ```{r}
 
 
@@ -85,7 +88,7 @@ library(patchwork)
 plot <- p1 + p2 +  plot_annotation(tag_levels = 'A') +  plot_layout(guides = 'collect')  &
   theme(legend.position='top')
 plot
-pdf("pp_npp v2.pdf", height=7, width=8) ; plot(plot) ; dev.off()
+# pdf("pp_npp v2.pdf", height=7, width=8) ; plot(plot) ; dev.off()
 
 ```
 
@@ -226,10 +229,11 @@ summary
 
 summary <- pp_rates %>%
   group_by(population, water_mass) %>%
-  summarize(median = round(median(npp), 2),
+  summarize(#median = round(median(npp), 2),
             mean = round(mean(npp), 2),
-            sd = round(sd(npp),2), n = n()) %>%
-   unite("mean_sd", mean:sd, sep = " ± ") 
+            sd = round(sd(npp),2),
+            n = n()) #%>%
+   # unite("mean_sd", mean:sd, sep = " ± ") 
 summary
 
 
@@ -354,7 +358,7 @@ lm <- lm(log10(pp) ~ population, data=pp_rates)
 plot(lm) 
 # based on diagnostic plots, lm is suitable.
 Anova(lm, type = "3") # p< 0.0001
-
+summary(lm)
 # Calculate model estimated means and CIs
 library(ggeffects)
 lm_emm <- ggemmeans(lm, 
@@ -362,15 +366,21 @@ lm_emm <- ggemmeans(lm,
                     type = "fixed")
 
 lm_emm
+plot(lm_emm)
 
 # Plot 
 pp_all <- ggplot() +
         # Raw data
-        geom_half_point_panel(aes(x = population,
+        geom_half_violin(aes(x = population,
                             y = pp),
-                        side = 'l', alpha = 0.6,
-                        size = 2, range_scale = 0.5,
+                        side = 'l',
+                        nudge = 0.05,
                         data = pp_rates) +
+        # geom_half_point_panel(aes(x = population,
+        #                     y = pp),
+        #                 side = 'l', alpha = 0.6,
+        #                 size = 1, range_scale = 0.5,
+        #                 data = pp_rates) +
         # Line of model predicted means
         geom_pointrange(aes(x = x,
                             y = predicted,
@@ -381,34 +391,109 @@ pp_all <- ggplot() +
                         position = position_dodge(width = 1),
                         data = lm_emm) +
         labs(x = "Population",
-             y = "PP"
-             # colour = "Water mass",
-             # shape = "Cycle",
-             # title = i
-             ) +
-      # scale_shape_manual(values=c(0,1, 15, 17, 19)) +
-      # scale_colour_manual(values = c("#C62828", "#1565C0"))+ 
+             y = "Cell-specific carbon fixation rate (fgC cell-1 hr-1)") +
       scale_y_continuous(trans='log10') +
-      annotation_logticks(sides = "l")
+      annotation_logticks(sides = "l") +
+  annotate("text", x = 3, y = 0.1, label = "ANOVA; R2=0.78,\n F[2,126]=221.84, p<0.0001")
 pp_all
+```
 
 
+#### group*wm
+Anova Table (Type III tests)
+
+Response: log10(pp)
+                       Sum Sq  Df F value    Pr(>F)    
+(Intercept)            0.9631   1  6.8834  0.009801 ** 
+population            21.1433   2 75.5604 < 2.2e-16 ***
+water_mass             4.2247   1 30.1956 2.148e-07 ***
+population:water_mass  1.6548   2  5.9138  0.003530 ** 
+Residuals             17.2089 123     
+
+Predicted values of pp
+
+water_mass = ST
+
+population | Predicted |         95% CI
+
+Syn        |      1.73 | [ 1.14,  2.62]
+Pico       |      2.76 | [ 1.82,  4.17]
+Nano       |     52.71 | [34.42, 80.72]
+
+water_mass = SA
+
+population | Predicted |         95% CI
+Syn        |      0.39 | [ 0.28,  0.55]
+Pico       |      1.26 | [ 0.90,  1.76]
+Nano       |     44.28 | [32.09, 61.12]
+
+```{r}
+set.seed(100)
 # interaction plot population and water mass?
-# lm <- lm(log10(pp) ~ population*water_mass, data=pp_rates)
-# plot(lm) 
-# Anova(lm, type = "3") # p< 0.0001
-# 
-# lm_emm <- ggemmeans(lm, 
-#                     terms = c("population", "water_mass"),
-#                     type = "fixed")
-# 
-# lm_emm
-# plot(lm_emm) + scale_y_continuous(trans='log10') +
-#       annotation_logticks(sides = "l", outside = TRUE)
+sub <- pp_rates %>%
+  group_by(population, water_mass) %>%
+  sample_n(16)
+
+summary <- sub %>%
+  group_by(population, water_mass) %>%
+  summarize(#median = round(median(npp), 2),
+            mean = round(mean(npp), 2),
+            sd = round(sd(npp),2),
+            n = n()) #%>%
+   # unite("mean_sd", mean:sd, sep = " ± ") 
+summary
+
+lm1 <- lm(log10(pp) ~ population*water_mass, data=sub)
+lm2 <- lm(log10(pp) ~ population+water_mass, data=sub)
+lm3 <- lm(log10(pp) ~ population, data=sub)
+anova(lm1, lm2)
+plot(lm1)
+Anova(lm1, type = "3") # p< 0.0001
+summary(lm1)
+
+lm_emm <- ggemmeans(lm1,
+                    terms = c("population", "water_mass"),
+                    type = "fixed")
+
+lm_emm
+plot(lm_emm) + scale_y_continuous(trans='log10') +
+      annotation_logticks(sides = "l", outside = TRUE)
+
+pp_mixed <- ggplot() +
+        # Raw data
+        geom_half_violin(aes(x = population,
+                            y = pp, split = water_mass, fill=water_mass),
+                        nudge = 0.001,
+                        alpha=0.5,
+                        data = pp_rates) +
+        # Line of model predicted means
+        geom_pointrange(aes(x = x,
+                            y = predicted,
+                            ymin = conf.low,
+                            ymax = conf.high,
+                            colour = group),
+                        size = 0.6,
+                        lwd = 1.3, 
+                        position = position_dodge(width = 0.25),
+                        data = lm_emm) +
+        labs(x = "Population",
+             y = "Cell-specific carbon fixation rate (fgC cell-1 hr-1)",
+             colour = "Water mass",
+             shape = "Cycle") +
+      scale_shape_manual(values=c(0,1, 15, 17, 19)) +
+      scale_fill_manual(values = c("#C62828", "#1565C0"))+ 
+      scale_colour_manual(values = c("#C62828", "#1565C0"))+
+      scale_y_continuous(trans='log10') +
+      annotation_logticks(sides = "l") +
+  annotate("text", x = 1.5, y = 100, label = "ANOVA; R2=0.83,\n Population*Water mass F[5,123]=5.9,\n p=0.003", size= 3)
+      # annotate("text", x = 1.7, y = 10, label = "t-test; R2=0.48,\n t40=6.22, p<0.0001")
+pp_mixed
+
+
 ```
 In each water mass compare between groups. Because values do not fit the assumptions of anova, using non-parametric equivalent of Kruskal wallis test. 
-In  ST, Syn=pico<nano
-In SA, all groups different from each other.
+In ST, Syn=pico<nano (non-parametric kruskal wallis)
+In SA, syn<pico<nano (ANOVA)
 ```{r}
 #ST is not normally distributed. Use kruskal wallis test.
 # in ST cycles only.
@@ -421,14 +506,6 @@ shapiro.test(log10(df$pp)) # not normally distributed.
 # checking diagnostic plots of lm. Not fitted to assumptions of linear model. Use non-parametric test
 lm <- lm(log10(pp) ~ population, data=df)
 plot(lm)
-Anova(lm, type = "3")
-lm_emm <- ggemmeans(lm,
-                    terms = c("population"),
-                    type = "fixed")
-
-lm_emm
-plot(lm_emm) + scale_y_continuous(trans='log10') +
-      annotation_logticks(sides = "l", outside = TRUE)
 
 # skewed data, run non parametric test
 print(kruskal.test(pp~population, data = df)) # significant
@@ -438,31 +515,29 @@ dunnTest(pp~population, data = df,
 )
 
 
-#SA is not normally distributed. Use kruskal wallis test.
+#SA, use ANOVA
 df <- pp_rates %>%
   filter(water_mass == "SA")
 hist(log10(df$pp))
 qqnorm(log10(df$pp))
 shapiro.test(log10(df$pp))
 
-# checking diagnostic plots of lm. Not fitted to assumptions of linear model. Use non-parametric test
+# checking diagnostic plots of lm. 
 lm <- lm(log10(pp) ~ population, data=df)
 plot(lm)
 #load lmtest package
 library(lmtest)
 #perform Breusch-Pagan Test
-bptest(lm) # according to BP test, residuals are not homoscedastic (evenly spread). 
-# Anova(lm, type = "3")
-
-print(kruskal.test(pp~population, data = df)) # not significant
-print(
-dunnTest(pp~population, data = df,
-       method="bonferroni")
-)
-
+bptest(lm) # p=0.04 
+Anova(lm, type = "3")
+summary(lm)
+lm_emm <- ggemmeans(lm,
+                    terms = c("population"),
+                    type = "fixed")
+lm_emm
+plot(lm_emm) + scale_y_continuous(trans='log10') +
+      annotation_logticks(sides = "l", outside = TRUE)
 ```
-
-
 
 ### within each group - ST vs SA
 #### ignore - plot
@@ -511,12 +586,14 @@ SA         |     44.28 | [33.08, 59.28]
 ```{r}
 
 # i = "Syn"
-# i = "Pico"
-i = "Nano"
-
+i = "Pico"
+# i = "Nano"
+set.seed(2)
 t_test_df<- pp_rates %>%
   filter(population == i) %>%
-  select(water_mass, pp, population,cycle_name)
+  select(water_mass, pp, population,cycle_name) #%>%
+  # group_by(water_mass) %>%
+  # sample_n(17)
 
 summary <- t_test_df %>%
   group_by(water_mass) %>%
@@ -539,6 +616,7 @@ print(p)
 
 lm <- lm(log10(pp) ~ water_mass, data=t_test_df)
 plot(lm) 
+summary(lm)
 
 # check for variance. If variance sig different, use var.equal = FALSE
 var.test(log10(pp) ~ water_mass, t_test_df)
@@ -555,6 +633,14 @@ lm_emm <- ggemmeans(lm,
 lm_emm
 
 plot(lm_emm)
+
+res <- wilcox.test(pp ~ water_mass, data = t_test_df,
+                   exact = FALSE)
+print(res)
+
+```
+
+```{r}
 ######### Plot #######
 library(gghalves)
 pp_syn <- ggplot() +
@@ -577,14 +663,15 @@ pp_syn <- ggplot() +
                         position = position_dodge(width = 1),
                         data = lm_emm) +
         labs(x = "Water mass",
-             y = "PP",
+             y = "Cell-specific carbon fixation rate (fgC cell-1 hr-1)",
              colour = "Water mass",
              shape = "Cycle",
-             title = i) +
+             title = "Synechococcus") +
       scale_shape_manual(values=c(0,1, 15, 17, 19)) +
       scale_colour_manual(values = c("#C62828", "#1565C0"))+ 
       scale_y_continuous(trans='log10') +
-      annotation_logticks(sides = "l")
+      annotation_logticks(sides = "l") +
+      annotate("text", x = 1.7, y = 10, label = "t-test; R2=0.48,\n t40=6.22, p<0.0001")
 pp_syn
 
 pp_pico <- ggplot() +
@@ -607,14 +694,15 @@ pp_pico <- ggplot() +
                         position = position_dodge(0.25),
                         data = lm_emm) +
         labs(x = "Water mass",
-             y = "PP",
+             y = NULL,
              colour = "Water mass",
              shape = "Cycle",
-             title = i) +
+             title = "Picoeukaryotes") +
       scale_shape_manual(values=c(0,1, 15, 17, 19)) +
       scale_colour_manual(values = c("#C62828", "#1565C0"))+
       scale_y_continuous(trans='log10') +
-      annotation_logticks(sides = "l")
+      annotation_logticks(sides = "l") +
+  annotate("text", x = 1.7, y = 25, label = "t-test; R2=0.10,\n t41=2.43, p=0.02")
 pp_pico
 
 pp_nano<- ggplot() +
@@ -637,27 +725,22 @@ pp_nano<- ggplot() +
                         position = position_dodge(0.25),
                         data = lm_emm) +
         labs(x = "Water mass",
-             y = "PP",
+             y = NULL,
              colour = "Water mass",
              shape = "Cycle",
-             title = i) +
+             title = "Nanoeukaryotes") +
       scale_shape_manual(values=c(0,1, 15, 17, 19)) +
       scale_colour_manual(values = c("#C62828", "#1565C0")) +
       scale_y_continuous(trans='log10') +
-      annotation_logticks(sides = "l")
+      annotation_logticks(sides = "l") +
+  annotate("text", x = 1.7, y = 300, label = "Welch t-test; R2=-0.01,\n t42=0.73, p=0.47")
   
 pp_nano
 
-# layout <- '
-# AA#
-# BCD
-# '
-# 
-# p<- pp_all+pp_syn+pp_pico+pp_nano + plot_annotation(tag_levels = 'A') + plot_layout(design = layout)+ plot_layout(guides = 'collect')  & theme(legend.position='top')
 p <- ((pp_all+ plot_spacer())/(pp_syn|pp_pico|pp_nano)) + plot_annotation(tag_levels = 'A') +  plot_layout(guides = 'collect')  &
-  theme(legend.position='right')
+  theme(legend.position='right') & theme(axis.text = element_text(size = 12), legend.text = element_text(size = 12), legend.title = element_text(size = 12), axis.title = element_text(size = 12))
 p
-pdf("pp_mean and CI.pdf", height=7, width=8) ; plot(p) ; dev.off()
+pdf("pp_mean and CI.pdf", height=10, width=12) ; plot(p) ; dev.off()
 
 ```
 
@@ -762,6 +845,7 @@ lm <- lm(log10(npp) ~ population, data=pp_rates)
 plot(lm)
 # based on diagnostic plots, lm is suitable.
 Anova(lm, type = "3")
+summary(lm)
 # pairwise.t.test(log10(pp_rates$pp), pp_rates$population, p.adj='bonferroni')
 
 
@@ -777,11 +861,16 @@ plot(lm_emm)
 # Plot 
 npp_all <- ggplot() +
         # Raw data
-        geom_half_point_panel(aes(x = population,
+       geom_half_violin(aes(x = population,
                             y = npp),
-                        side = 'l', alpha = 0.6,
-                        size = 1, range_scale = 0.5,
+                        side = 'l',
+                        nudge = 0.05,
                         data = pp_rates) +
+        # geom_half_point_panel(aes(x = population,
+        #                     y = npp),
+        #                 side = 'l', alpha = 0.6,
+        #                 size = 1, range_scale = 0.5,
+        #                 data = pp_rates) +
         # Line of model predicted means
         geom_pointrange(aes(x = x,
                             y = predicted,
@@ -792,7 +881,7 @@ npp_all <- ggplot() +
                         position = position_dodge(width = 1),
                         data = lm_emm) +
         labs(x = "Population",
-             y = "NPP"
+             y = "Group-specific production (mgC m-3 day-1)"
              # colour = "Water mass",
              # shape = "Cycle",
              # title = i
@@ -800,22 +889,89 @@ npp_all <- ggplot() +
       # scale_shape_manual(values=c(0,1, 15, 17, 19)) +
       # scale_colour_manual(values = c("#C62828", "#1565C0"))+ 
       scale_y_continuous(trans='log10') +
-      annotation_logticks(sides = "l")
-npp_all
+      annotation_logticks(sides = "l") +
+  annotate("text", x = 3, y = 30, label = "ANOVA; R2=0.21,\n F{2, 126}=17.99, p<0.0001")
 
+npp_all
+```
+#### interaction
+Predicted values of npp
+
+water_mass = ST
+
+population | Predicted |       95% CI
+
+Syn        |      1.04 | [0.69, 1.56]
+Pico       |      0.76 | [0.51, 1.13]
+Nano       |      3.11 | [2.07, 4.68]
+
+water_mass = SA
+
+population | Predicted |       95% CI
+
+Syn        |      0.52 | [0.36, 0.75]
+Pico       |      0.38 | [0.27, 0.55]
+Nano       |      1.56 | [1.10, 2.22]
+```{r}
+set.seed(120396)
+sub <- pp_rates %>%
+  group_by(population, water_mass) %>%
+  sample_n(16)
 
 # interaction plot population and water mass?
-lm <- lm(log10(npp) ~ population*water_mass, data=pp_rates)
-plot(lm)
-Anova(lm, type = "3") # p< 0.0001
+lm1 <- lm(log10(npp) ~ population*water_mass, data=sub)
+lm2 <- lm(log10(npp) ~ population+water_mass, data=sub) # chose this model
+lm3 <- lm(log10(npp) ~ population, data=sub)
+lm4 <- lm(log10(npp) ~ water_mass, data=sub)
 
-lm_emm <- ggemmeans(lm,
+anova(lm2, lm3)
+# choose lm2
+
+plot(lm2)
+Anova(lm2, type = "2") # p< 0.0001
+summary(lm2)
+
+lm_emm <- ggemmeans(lm2,
                     terms = c("population", "water_mass"),
                     type = "fixed")
 
 lm_emm
 plot(lm_emm) + scale_y_continuous(trans='log10') +
       annotation_logticks(sides = "l", outside = TRUE)
+
+npp_mixed <- ggplot() +
+        # Raw data
+        geom_half_violin(aes(x = population,
+                            y = npp, split = water_mass, fill=water_mass),
+                        nudge = 0.001,
+                        alpha=0.5,
+                        data = pp_rates) +
+        # Line of model predicted means
+        geom_pointrange(aes(x = x,
+                            y = predicted,
+                            ymin = conf.low,
+                            ymax = conf.high,
+                            colour = group),
+                        size = 0.6,
+                        lwd = 1.3, 
+                        position = position_dodge(width = 0.25),
+                        data = lm_emm) +
+        labs(x = "Population",
+             y = "Group-specific production (mgC m-3 day-1)",
+             colour = "Water mass",
+             shape = "Cycle") +
+      scale_shape_manual(values=c(0,1, 15, 17, 19)) +
+      scale_fill_manual(values = c("#C62828", "#1565C0"))+ 
+      scale_colour_manual(values = c("#C62828", "#1565C0"))+
+      scale_y_continuous(trans='log10') +
+      annotation_logticks(sides = "l") +
+      annotate("text", x = 2.5, y = 20, label = "ANOVA; R2=0.28,\n Population F[4,125]=20.3, \n Water mass F[4,125] = 12.4, \n p<0.0001", size= 3)
+npp_mixed
+
+p <- (pp_mixed|npp_mixed) + plot_annotation(tag_levels = 'A') +  plot_layout(guides = 'collect')  &
+  theme(legend.position='right')  & theme(axis.text = element_text(size = 12), legend.text = element_text(size = 12), legend.title = element_text(size = 12), axis.title = element_text(size = 12))
+p
+pdf("pp npp interactions_mean and CI.pdf", height=5, width=10) ; plot(p) ; dev.off()
 ```
 ### Within each water mass check between groups
 same for both water masses
@@ -829,7 +985,7 @@ population   1.3067  2  2.2379 0.1179
 Residuals   13.7220 47        
 
 population | Predicted |       95% CI
--------------------------------------
+
 Syn        |      1.18 | [0.64, 2.16]
 Pico       |      0.92 | [0.50, 1.68]
 Nano       |      2.24 | [1.20, 4.18]
@@ -842,7 +998,7 @@ Response: log10(npp)
 (Intercept)  2.5359  1  14.599   0.00027 ***
 population   8.4950  2  24.453 6.322e-09 ***
 Residuals   13.2014 76                      
----
+
 Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1
 
 ```{r}
@@ -863,14 +1019,6 @@ lm_emm <- ggemmeans(lm,
                     type = "fixed")
 lm_emm
 plot(lm_emm)
-
-# skewed data, run non parametric test
-print(kruskal.test(npp~population, data = df)) # significantly different between the three groups.p =0.02
-print(
-dunnTest(npp~population, data = df, #perform Dunn's Test with Bonferroni correction for p-values
-       method="bonferroni")
-)
-
 
 
 
@@ -930,7 +1078,7 @@ ST is different from SA for pico.
 Syn:t-test, different. t = 2.4056, df = 40, p-value = 0.02086
 wilcox test, not different. W = 276, p-value = 0.1064
 water_mass | Predicted |       95% CI
--------------------------------------
+
 ST         |      1.18 | [0.66, 2.10]
 SA         |      0.48 | [0.30, 0.78]
 
@@ -942,14 +1090,14 @@ SA         |      0.34 | [0.22, 0.50]
 
 Nano:t-test, not different t = 0.52716, df = 42, p-value = 0.6009
 water_mass | Predicted |       95% CI
--------------------------------------
+
 ST         |      2.24 | [1.33, 3.76]
 SA         |      1.89 | [1.27, 2.79]
 ```{r}
 
-i = "Syn"
+# i = "Syn"
 # i = "Pico"
-# i = "Nano"
+i = "Nano"
 
 t_test_df<- pp_rates %>%
   filter(population == i) %>%
@@ -977,11 +1125,12 @@ shapiro.test(log10(t_test_df$npp))
 
 lm <- lm(log10(npp) ~ water_mass, data=t_test_df)
 plot(lm) 
+summary(lm)
 
 #  variance equal for all.
 var.test(log10(npp) ~ water_mass, t_test_df)
 
-res <- t.test(log10(npp) ~ water_mass, data =  t_test_df, var.equal = TRUE)
+res <- t.test(log10(npp) ~ water_mass, data =  t_test_df, var.equal = FALSE)
 print(res)
 
 lm_emm <- ggemmeans(lm, 
@@ -990,10 +1139,6 @@ lm_emm <- ggemmeans(lm,
 lm_emm
 
 plot(lm_emm) 
-#non-parametric- wilcox test = mann-whitney test, wilcoxon rank sum test (independednt samples)
-res <- wilcox.test(npp ~ water_mass, data = t_test_df,
-                   exact = FALSE)
-print(res)
 
 ######### Plot #######
 library(gghalves)
@@ -1017,14 +1162,15 @@ npp_syn <- ggplot() +
                         position = position_dodge(width = 1),
                         data = lm_emm) +
         labs(x = "Water mass",
-             y = "NPP",
+             y = "Group-specific production (mgC m-3 day-1)",
              colour = "Water mass",
              shape = "Cycle",
-             title = i) +
+             title = "Synechococcus") +
       scale_shape_manual(values=c(0,1, 15, 17, 19)) +
       scale_colour_manual(values = c("#C62828", "#1565C0"))+ 
-      scale_y_continuous(trans='log10') +
-      annotation_logticks(sides = "l")
+      scale_y_continuous(trans='log10', limits = c(0.04,30)) +
+      annotation_logticks(sides = "l") +
+  annotate("text", x = 1.7, y = 20, label = "t-test; R2=0.10,\n t(40)=2.41, p=0.02")
 npp_syn
 
 npp_pico <- ggplot() +
@@ -1047,14 +1193,15 @@ npp_pico <- ggplot() +
                         position = position_dodge(0.25),
                         data = lm_emm) +
         labs(x = "Water mass",
-             y = "NPP",
+             y = NULL,
              colour = "Water mass",
              shape = "Cycle",
-             title = i) +
+             title = "Picoeukaryotes") +
       scale_shape_manual(values=c(0,1, 15, 17, 19)) +
       scale_colour_manual(values = c("#C62828", "#1565C0"))+
-      scale_y_continuous(trans='log10') +
-      annotation_logticks(sides = "l")
+      scale_y_continuous(trans='log10', limits = c(0.04,30)) +
+      annotation_logticks(sides = "l")+
+  annotate("text", x = 1.7, y = 20, label = "t-test; R2=0.18,\n t(41)=3.17, p=0.003")
 npp_pico
 
 npp_nano<- ggplot() +
@@ -1077,27 +1224,22 @@ npp_nano<- ggplot() +
                         position = position_dodge(0.25),
                         data = lm_emm) +
         labs(x = "Water mass",
-             y = "NPP",
+             y = NULL,
              colour = "Water mass",
              shape = "Cycle",
-             title = i) +
+             title = "Nanoeukaryotes") +
       scale_shape_manual(values=c(0,1, 15, 17, 19)) +
       scale_colour_manual(values = c("#C62828", "#1565C0")) +
-      scale_y_continuous(trans='log10') +
-      annotation_logticks(sides = "l")
+      scale_y_continuous(trans='log10', limits = c(0.04,30)) +
+      annotation_logticks(sides = "l")+
+  annotate("text", x = 1.7, y = 20, label = "t-test; R2=-0.02,\n t(42)=0.53, p=0.60")
   
 npp_nano
 
-# layout <- '
-# AA#
-# BCD
-# '
-# 
-# p<- pp_all+pp_syn+pp_pico+pp_nano + plot_annotation(tag_levels = 'A') + plot_layout(design = layout)+ plot_layout(guides = 'collect')  & theme(legend.position='top')
 p <- ((npp_all+ plot_spacer())/(npp_syn|npp_pico|npp_nano)) + plot_annotation(tag_levels = 'A') +  plot_layout(guides = 'collect')  &
-  theme(legend.position='right')
+  theme(legend.position='right')  & theme(axis.text = element_text(size = 12), legend.text = element_text(size = 12), legend.title = element_text(size = 12), axis.title = element_text(size = 12))
 p
-pdf("npp_mean and CI.pdf", height=7, width=8) ; plot(p) ; dev.off()
+pdf("npp_mean and CI.pdf", height=10, width=12) ; plot(p) ; dev.off()
 
 
 ```
