--- a/R_C14_rates calculation/private/Growth rate v2.Rmd
+++ b/R_C14_rates calculation/private/Growth rate v2.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "Growth rates figures"
+title: "Growth rate figures 2.0"
 author: "Denise Ong"
-date: "11/17/2022"
+date: "2023-09-26"
 output: html_document
 ---
 Figures and statistical tests for cell diameter and growth rates.
@@ -31,7 +31,6 @@ size_raw <-  readxl::read_excel(here("Output", "Raw data", "fsc_cell size.xlsx")
   mutate(exp = as.character(exp))
 
 rates <- readxl::read_excel(here("Output", "Raw data", "Rates_cell_npp_method2.xlsx")) %>%
-  select(-MD) %>%
   rename(depth_cat = depth,
          CTD = ctd)
 
@@ -109,6 +108,27 @@ writexl::write_xlsx(summary, path = "group_summary.xlsx")
 
 ```
 
+
+```{r}
+summary <- join_rates %>%
+  group_by(pop_fsc) %>%
+  summarize(#median = round(median(npp), 2),
+            mean = round(mean(growth_rate), 2),
+            sd = round(sd(growth_rate),2), n = n()) %>%
+   unite("mean_sd", mean:sd, sep = " ± ") 
+summary
+
+
+summary <- stats_rates %>%
+  group_by(population, water_mass) %>%
+  summarize(median = round(median(npp), 2),
+            mean = round(mean(growth_rate), 2),
+            sd = round(sd(growth_rate),2), n = n()) %>%
+   unite("mean_sd", mean:sd, sep = " ± ") 
+summary
+```
+
+
 # Diameter
 after subset, no difference between ST and SA. 
 ```{r}
@@ -159,7 +179,7 @@ for(i in c("Syn_LV", "Pico_NA", "Nano_NA")){
 ```
 
 
-# Growth rate
+# Checks
 plots for checking
 ```{r}
 #Plot all
@@ -190,53 +210,6 @@ for (i in c("Syn", "Pico", "Nano")) {
   # pdf(here(str_c("pp_depth_", i, ".pdf")), height=5, width=8) ; plot(p) ; dev.off()
 }
 
-
-```
-
-
-## Figure 5 - Growth rates by water mass
-```{r}
-p <- join_rates %>%
-  # filter(growth_rate <2)%>%
-  ggplot(aes(x=population, y=growth_rate, fill = water_mass))+
-  # geom_violin(aes(x=population, y=growth_rate))+
-  geom_boxplot(outlier.shape = NA, alpha = 0.8)+
-  geom_point(colour = "black",  alpha = 0.5, size = 1, position = position_jitterdodge(dodge.width = 0.75, jitter.width = 0.2))+
-  # geom_jitter(, width = 0.1, alpha =  0.3, position=position_dodge(1)) +
-  # scale_y_continuous(trans='log10') + annotation_logticks(sides = "l") +
-  ylab("Growth rate (day-1)") +
-  xlab(NULL)+
-  theme(strip.background = element_blank(),
-        legend.position="top") +
-  scale_fill_manual(values = c("#C62828", "#1565C0"))
-
-p
-
-pdf("growth rate_not log.pdf", height=6, width=6) ; plot(p) ; dev.off()
-
-
-```
-
-```{r}
-p <- join_rates %>%
-    ggplot() +
-      geom_jitter(aes(x=cycle_name, y=growth_rate, colour = depth_cat), width = 0.2, alpha = 0.5, size = 1.5)+
-      geom_boxplot(aes(x=water_mass, y= growth_rate, fill=water_mass))+
-      scale_colour_manual(values =  c("#009292", "#DB6D00"))+
-      scale_fill_manual(values = c("#C62828", "#1565C0")) +
-      facet_grid(population~water_mass, scales = "free", space = "free_x") +
-  theme_bw()+
-      # theme_linedraw() +
-      theme(legend.position = "top",
-            panel.spacing = unit(1, "lines"))+
-      # scale_y_continuous(trans='log10') +
-      # annotation_logticks(sides = "l", outside = TRUE)+
-      # coord_cartesian(clip = "off")+
-      ylab("Growth rate (day-1)") +
-      xlab("Cycle")
-p
-
-pdf("growth rate by cycle and depth_not log.pdf", height=6, width=6) ; plot(p) ; dev.off()
 
 ```
 
@@ -281,7 +254,6 @@ res <- wilcox.test(diam ~ depth_cat, data = t_test_df,
 print(res)
 
 ```
-
 ### ST vs SA
 Not significantly different between ST and SA
 ```{r}
@@ -319,82 +291,6 @@ print(res)
 ```
 
 ## growth rate
-### Between groups
-Anova Table (Type III tests)
-
-Response: log10(growth_rate)
-            Sum Sq  Df F value    Pr(>F)    
-(Intercept) 36.343   1 191.060 < 2.2e-16 ***
-population   2.706   2   7.113  0.001183 ** 
-Residuals   23.967 126 
-population | Predicted |       95% CI
--------------------------------------
-Syn        |      0.12 | [0.09, 0.16]
-Pico       |      0.20 | [0.15, 0.27]
-Nano       |      0.26 | [0.19, 0.35]
-```{r}
-
-# hist(stats_rates$growth_rate)
-# qqnorm(stats_rates$growth_rate) 
-# shapiro.test(stats_rates$growth_rate)
-# 
-# hist(log10(stats_rates$growth_rate))
-# qqnorm(log10(stats_rates$growth_rate))
-# shapiro.test(log10(stats_rates$growth_rate)) # meets assumptions for ANOVA
-
-
-lm <- lm(log10(growth_rate) ~ population, data=stats_rates)
-# plot(lm)
-Anova(lm, type = "3")
-
-library(ggeffects)
-lm_emm <- ggemmeans(lm, 
-                    terms = c("population"),
-                    type = "fixed")
-
-lm_emm
-plot(lm_emm)
-
-```
-### In each water mass, compare the patterns again
-```{r}
-#ST is not normally distributed. Use kruskal wallis test.
-
-df <- stats_rates %>%
-  filter(water_mass == "ST")
-# hist(log10(df$growth_rate))
-# qqnorm(log10(df$growth_rate))
-# print(shapiro.test(log10(df$growth_rate)))
-lm <- lm(log10(growth_rate) ~ population, data=df)
-# plot(lm)
-Anova(lm, type = "3")
-lm_emm <- ggemmeans(lm, 
-                    terms = c("population"),
-                    type = "fixed")
-lm_emm
-plot(lm_emm)
-
-#SA
-df <- stats_rates %>%
-  filter(water_mass == "SA")
-# hist(log10(df$growth_rate))
-# qqnorm(log10(df$growth_rate))
-# print(shapiro.test(log10(df$growth_rate)))
-
-lm <- lm(log10(growth_rate) ~ population, data=df)
-# plot(lm)
-Anova(lm, type = "3")
-
-lm_emm <- ggemmeans(lm, 
-                    terms = c("population"),
-                    type = "fixed")
-lm_emm
-plot(lm_emm)
-
-
-```
-
-
 ### SUR vs DCM
 syn: t = -2.3232, df = 40, p-value = 0.02534
 depth_cat | Predicted |       95% CI
@@ -461,83 +357,238 @@ plot(lm_emm)
 
 ```
 
-### ST vs SA
-ST is different from SA for syn and pico.
+### Between groups
+Anova Table (Type III tests)
 
-Syn: t = 5.9525, df = 40, p-value = 5.512e-07
+Response: log10(growth_rate)
+            Sum Sq  Df F value    Pr(>F)    
+(Intercept) 36.343   1 191.060 < 2.2e-16 ***
+population   2.706   2   7.113  0.001183 ** 
+Residuals   23.967 126 
+population | Predicted |       95% CI
 
-water_mass | Predicted |       95% CI
--------------------------------------
-ST         |      0.28 | [0.19, 0.41]
-SA         |      0.07 | [0.05, 0.09]
-
-pico: t = 2.7745, df = 41, p-value = 0.008287
-water_mass | Predicted |       95% CI
--------------------------------------
-ST         |      0.33 | [0.21, 0.53]
-SA         |      0.15 | [0.10, 0.21]
-
-nano:t = 0.2725, df = 18.577, p-value = 0.7882
-water_mass | Predicted |       95% CI
--------------------------------------
-ST         |      0.28 | [0.17, 0.45]
-SA         |      0.25 | [0.18, 0.36]
+Syn        |      0.12 | [0.09, 0.16]
+Pico       |      0.20 | [0.15, 0.27]
+Nano       |      0.26 | [0.19, 0.35]
 ```{r}
-# i = "Syn"
-# i = "Pico"
-i = "Nano"
 
-t_test_df<- stats_rates %>%
-  filter(population == i) %>%
-  dplyr::select(water_mass, exp,  growth_rate)
+# hist(stats_rates$growth_rate)
+# qqnorm(stats_rates$growth_rate) 
+# shapiro.test(stats_rates$growth_rate)
+# 
+# hist(log10(stats_rates$growth_rate))
+# qqnorm(log10(stats_rates$growth_rate))
+# shapiro.test(log10(stats_rates$growth_rate)) # meets assumptions for ANOVA
 
-summary <- t_test_df %>%
-  group_by(water_mass) %>%
-  summarise(count = n(),
-    mean = mean(growth_rate, na.rm = TRUE),
-    sd = sd(growth_rate, na.rm = TRUE))
-print(summary)
- p <- t_test_df %>%
-   ggplot(aes(x=water_mass, y=growth_rate)) + geom_point() +geom_boxplot()+ scale_y_continuous(trans='log10') + annotation_logticks(sides = "l")  +ggtitle(i)
- print(p)
- 
-# checks, all groups meet assumptions of normality and homoskedasticity
-hist(log10(t_test_df$growth_rate))
-qqnorm(log10(t_test_df$growth_rate))
-shapiro.test(log10(t_test_df$growth_rate))
+```
 
-lm <- lm(log10(growth_rate) ~ water_mass, data=t_test_df)
-plot(lm) 
+```{r}
+set.seed(643)
+sub <- stats_rates %>%
+  group_by(population, water_mass) %>%
+  sample_n(16)
 
-# check for variance. If variance sig different, use var.equal = FALSE
-var.test(log10(growth_rate) ~ water_mass, t_test_df)
 
-# parametric
-t.test(log10(growth_rate) ~ water_mass, data =  t_test_df, var.equal = FALSE)
+lm1 <- lm(log10(growth_rate) ~ population*water_mass, data=sub)
+lm2 <- lm(log10(growth_rate) ~ population+water_mass, data=sub)
+# lm3 <- lm(log10(growth_rate) ~ population, data=sub)
+anova(lm1, lm2)
+plot(lm1)
+Anova(lm1, type = "3")
+summary(lm1)
 
+lm.emm <- emmeans(lm1, ~ population*water_mass)
+contrast(lm.emm, "consec", simple = "each", combine = TRUE, adjust = "mvt")
+
+
+# plot predicted means and 95%CI
+library(ggeffects)
+lm_emm <- ggemmeans(lm1, 
+                    terms = c("population", "water_mass"),
+                    type = "fixed")
+
+lm_emm
+plot(lm_emm)
+
+```
+
+```{r}
+lm1 <- lm(log10(growth_rate) ~ population*water_mass, data=stats_rates)
+lm2 <- lm(log10(growth_rate) ~ population+water_mass, data=stats_rates)
+lm3 <- lm(log10(growth_rate) ~ population, data=stats_rates)
+anova(lm1, lm2)
+plot(lm1)
+Anova(lm1, type = "3")
+summary(lm1)
+
+#post-hoc test
+library(emmeans)
+lm.emm <- emmeans(lm1, ~ population*water_mass)
+contrast(lm.emm, "consec", simple = "each", combine = TRUE, adjust = "mvt")
+
+# plot predicted means and 95%CI
+library(ggeffects)
+lm_emm <- ggemmeans(lm1, 
+                    terms = c("population", "water_mass"),
+                    type = "fixed")
+
+lm_emm
+plot(lm_emm)
+
+
+p <- ggplot() +
+        # Raw data
+        geom_half_violin(aes(x = population,
+                            y = growth_rate, split = water_mass, fill=water_mass),
+                        nudge = 0.001,
+                        alpha=0.5,
+                        data = stats_rates) +
+        # Line of model predicted means
+        geom_pointrange(aes(x = x,
+                            y = predicted,
+                            ymin = conf.low,
+                            ymax = conf.high,
+                            colour = group),
+                        size = 0.6,
+                        lwd = 1.3, 
+                        position = position_dodge(width = 0.25),
+                        data = lm_emm) +
+        labs(x = "Water mass",
+             y = "Growth rate (day-1)",
+             colour = "Water mass",
+             shape = "Cycle") +
+      scale_shape_manual(values=c(0,1, 15, 17, 19)) +
+      scale_fill_manual(values = c("#C62828", "#1565C0"))+ 
+      scale_colour_manual(values = c("#C62828", "#1565C0"))+
+      scale_y_continuous(trans='log10') +
+      annotation_logticks(sides = "l") +
+      annotate("text", x = 1.7, y =3, label = "ANOVA; R2 = 0.27,\n Population X Water mass: \n F[2,123] = 5.75, p = 0.004", size = 3.5)
+p
+
+pdf("growth rate interaction_mean and CI.pdf", height=4, width=6) ; plot(p) ; dev.off()
+
+
+```
+
+### In each water mass, compare the patterns again
+
+based on subsampling, becuase of unbalanced sampling, need to compare separately.
+```{r}
+#ST is not normally distributed. Use kruskal wallis test.
+
+df <- stats_rates %>%
+  filter(water_mass == "ST")
+# hist(log10(df$growth_rate))
+# qqnorm(log10(df$growth_rate))
+# print(shapiro.test(log10(df$growth_rate)))
+lm <- lm(log10(growth_rate) ~ population, data=df)
+# plot(lm)
+Anova(lm, type = "3")
+summary(lm)
 lm_emm <- ggemmeans(lm, 
-                    terms = c("water_mass"),
+                    terms = c("population"),
                     type = "fixed")
 lm_emm
 plot(lm_emm)
-```
 
-# Summary for paper
-```{r}
-summary <- join_rates %>%
-  group_by(pop_fsc) %>%
-  summarize(#median = round(median(npp), 2),
-            mean = round(mean(growth_rate), 2),
-            sd = round(sd(growth_rate),2), n = n()) %>%
-   unite("mean_sd", mean:sd, sep = " ± ") 
-summary
+library(gghalves)
+st <- ggplot() +
+        # Raw data
+       geom_half_violin(aes(x = population,
+                            y = growth_rate),
+                        side = 'l',
+                        nudge = 0.05,
+                        data = df) +
+        # geom_half_point_panel(aes(x = population,
+        #                     y = npp),
+        #                 side = 'l', alpha = 0.6,
+        #                 size = 1, range_scale = 0.5,
+        #                 data = pp_rates) +
+        # Line of model predicted means
+        geom_pointrange(aes(x = x,
+                            y = predicted,
+                            ymin = conf.low,
+                            ymax = conf.high),
+                        size = 0.6,
+                        lwd = 1.3, 
+                        position = position_dodge(width = 1),
+                        data = lm_emm) +
+        labs(x = "Population",
+             y = "Growth rate (day-1)",
+             # colour = "Water mass",
+             # shape = "Cycle",
+             title = "Subtropical"
+             ) +
+      # scale_shape_manual(values=c(0,1, 15, 17, 19)) +
+      # scale_colour_manual(values = c("#C62828", "#1565C0"))+ 
+      # scale_y_continuous(trans='log10', limits = c(0.01, 4)) +
+      # annotation_logticks(sides = "l") +
+  annotate("text", x = 1.5, y = 3.5, label = "ANOVA; R2=-0.03,\n  F{2, 47} = 0.14, p = 0.87")
+
+st
 
 
-summary <- stats_rates %>%
-  group_by(population, water_mass) %>%
-  summarize(median = round(median(npp), 2),
-            mean = round(mean(growth_rate), 2),
-            sd = round(sd(growth_rate),2), n = n()) %>%
-   unite("mean_sd", mean:sd, sep = " ± ") 
-summary
+
+#SA
+df <- stats_rates %>%
+  filter(water_mass == "SA")
+# hist(log10(df$growth_rate))
+# qqnorm(log10(df$growth_rate))
+# print(shapiro.test(log10(df$growth_rate)))
+
+lm <- lm(log10(growth_rate) ~ population, data=df)
+# plot(lm)
+Anova(lm, type = "3")
+summary(lm)
+
+# library(emmeans)
+lm.emm <- emmeans(lm, ~ population)
+contrast(lm.emm, "consec", simple = "each", combine = TRUE, adjust = "mvt")
+
+lm_emm <- ggemmeans(lm, 
+                    terms = c("population"),
+                    type = "fixed")
+lm_emm
+plot(lm_emm)
+
+sa <- ggplot() +
+        # Raw data
+  # geom_dotplot(aes(x = population,
+  #                           y = growth_rate), binaxis = "y", method="histodot", stackdir="up", position = PositionDodge,data = df, size=1)+
+       geom_half_violin(aes(x = population,
+                            y = growth_rate),
+                        side = 'l',
+                        nudge = 0.05,
+                        data = df) +
+       #  geom_half_point_panel(aes(x = population,
+       #                      y = growth_rate),
+       #                  side = 'l', alpha = 0.6,
+       #                  size = 1, range_scale = 0.5,
+       #                  data = df) +
+        # Line of model predicted means
+        geom_pointrange(aes(x = x,
+                            y = predicted,
+                            ymin = conf.low,
+                            ymax = conf.high),
+                        size = 0.6,
+                        lwd = 1.3, 
+                        position = position_dodge(width = 1),
+                        data = lm_emm) +
+        labs(x = "Population",
+             y = "Growth rate (day-1)",
+             # colour = "Water mass",
+             # shape = "Cycle",
+             title = "Subantarctic"
+             ) +
+      # scale_shape_manual(values=c(0,1, 15, 17, 19)) +
+      # scale_colour_manual(values = c("#C62828", "#1565C0"))+ 
+      # scale_y_continuous(trans='log10', limits = c(0.01, 4)) +
+      # annotation_logticks(sides = "l") +
+  annotate("text", x = 1.5, y = 3.5, label = "ANOVA; R2=0.35,\n F{2, 76} = 21.73, p < 0.0001")
+
+sa
+p <- (st|sa) + plot_annotation(tag_levels = 'A') +  plot_layout(guides = 'collect')  &
+  theme(legend.position='right')  & theme(axis.text = element_text(size = 12), legend.text = element_text(size = 12), legend.title = element_text(size = 12), axis.title = element_text(size = 12))
+p
+pdf("growth rate_mean and CI.pdf", height=5, width=10) ; plot(p) ; dev.off()
 ```
